plasmaclock: Fix calendar resizing

BUG: 306762
FIXED-IN: 4.9.2
REVIEW: 106441